--- a/corporate.css
+++ b/corporate.css
@@ -1,9 +1,9 @@
 /*------------------------------------------------------------------
 Main Stylesheet
 
-Project:    Highpoint Corporate Template
+Project:    Highpoint - Multipurpose Corporate Template
 Version:    1.0
-Last change:    08/11/2021
+Last change:    25/11/2021
 Author:    creativemaze
 Primary use:    Corporate
 -------------------------------------------------------------------*/
@@ -56,7 +56,7 @@ ul{
 	width: 100%;
 }
 
-.js .loading::before {
+#loading::before {
 	content: '';
 	position: fixed;
 	z-index: 100000;
@@ -67,7 +67,7 @@ ul{
 	background: #ffffff;
 }
 
-.js .loading::after {
+#loading::after {
 	content: '';
 	position: fixed;
 	z-index: 100000;
@@ -121,7 +121,7 @@ ul{
  
 /* --- 2.1. Logo & Navigation --- */
 nav.navbar.bootsnav .navbar-brand{
-    max-width: 200px !important; 	
+    max-width: 200px; 	
 }
 
 .navbar-header a.navbar-brand{
@@ -133,7 +133,7 @@ nav.navbar.bootsnav .navbar-brand{
 	font-weight: 700;
 	letter-spacing: 1px;
 	text-transform: uppercase;
-	padding-top: 28px;
+	padding-top: 30px;
 }
 
 .navbar-header a.navbar-brand:hover{
@@ -432,13 +432,14 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .header__content > div{
-	animation-duration: 1s;
-	animation-delay: 0.5s;
+	animation-duration: 2s;
+	animation-delay: 1s;
 	display: none;
 }
 
 .header__content > div.active{
 	display: block;
+	animation-play-state: running !important;
 }
 
 .header-title__main{
@@ -554,7 +555,6 @@ li.slick-active button{
 	vertical-align: middle;
 	width: 100%;
 	height: auto;
-	transition: 0.5s;
 	display: block;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
 }
@@ -653,7 +653,7 @@ li.slick-active button{
 }
 
 .corporate_icon_box{
-	max-width: 350px;
+	max-width: 300px;
 	margin: auto;
 	padding: 30px;
 	text-align: center;
@@ -670,7 +670,6 @@ li.slick-active button{
 	display: block;
 	text-align: center;
 	letter-spacing: 1px;
-	transition: 0.5s;
 	line-height: 1.4em;
 }
 
@@ -683,7 +682,6 @@ li.slick-active button{
 	color: #696969;
 	letter-spacing: 1px;
 	text-align: center;
-	transition: 0.5s;
 	line-height: 1.5em;
 }
 
@@ -1132,7 +1130,6 @@ li.slick-active button{
 	border-radius: 50%;
 	overflow: hidden;
 	position: relative;
-	transition: ease-in-out 0.5s;
 }
 
 .team_image img{
@@ -1355,7 +1352,6 @@ li.slick-active button{
 	vertical-align: middle;
 	width: 100%;
 	height: auto;
-	transition: 0.5s;
 	display: block;
 }
 
@@ -1369,7 +1365,7 @@ li.slick-active button{
 
 .blog_title a{
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 18px;
+	font-size: 20px;
 	display: block;
 	font-weight: 600;
 	color: #111111;
@@ -2026,6 +2022,10 @@ a.footer-brand img{
 		margin-left: 0;
 	}
 	
+	.col_head h3{
+		font-size: 25px;
+	}
+	
 	.footer_col{
 		flex: 100%;
 		width: 100%;
@@ -2041,10 +2041,6 @@ a.footer-brand img{
 	.blog_col,
 	.wide_box{
 		padding: 0;
-	}
-	
-	.col_head h3{
-		font-size: 25px;
 	}
 }
 
