--- a/start-up.css
+++ b/start-up.css
@@ -1,9 +1,9 @@
 /*------------------------------------------------------------------
 Main Stylesheet
 
-Project:    Highpoint Corporate Template
+Project:    HighPoint - Multipurpose Business Template
 Version:    1.0
-Last change:    12/11/2021
+Last change:    1/12/2021
 Author:    creativemaze
 Primary use:    Start-Up
 -------------------------------------------------------------------*/
@@ -56,7 +56,7 @@ ul{
 	width: 100%;
 }
 
-.js .loading::before {
+#loading::before {
 	content: '';
 	position: fixed;
 	z-index: 100000;
@@ -67,7 +67,7 @@ ul{
 	background: #ffffff;
 }
 
-.js .loading::after {
+#loading::after {
 	content: '';
 	position: fixed;
 	z-index: 100000;
@@ -121,7 +121,7 @@ ul{
  
 /* --- 2.1. Logo & Navigation --- */
 nav.navbar.bootsnav .navbar-brand{
-    max-width: 200px !important; 	
+    max-width: 200px; 	
 }
 
 .navbar-header a.navbar-brand{
@@ -517,12 +517,12 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .prev_slide,
 .next_slide{
-	font-size: 18px;
+	font-size: 15px;
 	transition: 0.6s ease;
 	border-radius: 50%;
 	background-color: transparent;
 	width: auto;
-	padding: 12px 21px;
+	padding: 10px 18px;
 	color: #111111;
 	cursor: pointer;
 	border: solid 1px #111111;	
@@ -824,21 +824,30 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	position: relative;
 	bottom: 30px;
 	min-height: 30px;
-	padding: 15px 35px 0;
+	padding: 10px 35px 0;
 	display: inline-block;
 }
 
 .info_name h3{
+	margin: 0;
+}
+
+.info_name h3 a{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 15px;
 	display: inline-block;
 	font-weight: 600;
 	color: #111111;
+	text-decoration: none;
 	letter-spacing: 1px;
 	text-align: center;
 	line-height: 1.4em;
-	margin: 0;
 	text-transform: uppercase;
+	transition: 0.5s;
+}
+
+.info_name h3 a:hover{
+	color: #159957;
 }
 
 /* --- 3.3. Start-Up Area Three --- */
@@ -1043,7 +1052,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .team_col img{
 	width: 100%;
 	height: auto;
-	transition: ease-in-out 0.5s;
 	display: block;
 	border-radius: 50%;
 }
@@ -1057,7 +1065,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding-top: 10px;
 	padding-left: 10px;
 	background-color: #ffffff;
-	transition: ease-in-out 0.5s;
 }
 
 .overlay {
@@ -1193,7 +1200,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	vertical-align: middle;
 	width: 100%;
 	height: auto;
-	transition: 0.5s;
 	display: block;
 	border-radius: 50%;
 }
@@ -1237,11 +1243,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .client_content{
 	max-width: 300px;
-	margin: auto;
 	height: auto;
 	padding: 10px;
-	transition: 0.5s;
-	overflow: hidden;
 }
 
 .client_name{
@@ -1344,7 +1347,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	vertical-align: middle;
 	width: 100%;
 	height: auto;
-	transition: 0.5s;
 	display: block;
 }
 
@@ -1383,7 +1385,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 a.blog_btn{
 	max-width: 120px;	
-    color: #111111;
+    color: #159957;
     text-decoration: none;
 	text-transform: uppercase;
     display: inline-block;
@@ -1411,9 +1413,12 @@ a.blog_btn::after{
 	position: relative;
 }
 
-a.blog_btn:hover,
 .blog_title a:hover{
 	opacity: 0.6;
+}
+
+a.blog_btn:hover{
+	color: #111111;
 }
 
 /* --- 3.8. Start-Up Area Eight --- */
@@ -1996,6 +2001,10 @@ a.footer-brand img{
 		margin-left: 0;
 	}
 	
+	.col_head h3{
+		font-size: 25px;
+	}
+	
 	.client_col{
 		flex: 100%;
 		width: 100%;
@@ -2033,10 +2042,6 @@ a.footer-brand img{
 	
 	.info_slide{
 		padding: 0 5px;
-	}
-	
-	.col_head h3{
-		font-size: 25px;
 	}
 }
 
