--- a/creative-agency.css
+++ b/creative-agency.css
@@ -1,9 +1,9 @@
 /*------------------------------------------------------------------
 Main Stylesheet
 
-Project:    Highpoint Corporate Template
+Project:    HighPoint - Multipurpose Business Template
 Version:    1.0
-Last change:    13/11/2021
+Last change:    01/12/2021
 Author:    creativemaze
 Primary use:    Creative Agency
 -------------------------------------------------------------------*/
@@ -56,7 +56,7 @@ ul{
 	width: 100%;
 }
 
-.js .loading::before {
+#loading::before {
 	content: '';
 	position: fixed;
 	z-index: 100000;
@@ -67,7 +67,7 @@ ul{
 	background: #ffffff;
 }
 
-.js .loading::after {
+#loading::after {
 	content: '';
 	position: fixed;
 	z-index: 100000;
@@ -1151,7 +1151,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin: 0 auto;
 	display: flex;
 	flex-wrap: wrap;
-	padding-top: 40px;
+	padding-top: 30px;
 	padding-bottom: 40px;
 }
 
@@ -1168,17 +1168,15 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	overflow: hidden;
 	margin: auto;
 	padding: 10px;
-	transition: 0.5s;
 }
 
 .featured_box{
 	position: relative;
 	overflow: hidden;
-	transition: .5s ease;
 }
 
 .featured_image .featured_box > img{
-	transition: ease-in-out 1.25s;
+	transition: ease-in-out 3.25s;
 }
 
 .featured_image:hover .featured_box > img{
@@ -1288,7 +1286,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	position: absolute;
 	bottom: 15px;
 	left: 15px;
-	transition: 0.5s;
 	margin: auto;
 }
 
@@ -2261,6 +2258,10 @@ a.footer-brand img{
 		margin-left: 0;
 	}
 	
+	.col_head h3{
+		font-size: 25px;
+	}
+	
 	.footer_col{
 		flex: 100%;
 		width: 100%;
@@ -2287,9 +2288,6 @@ a.footer-brand img{
 		padding-right: 0;
 	}
 	
-	.col_head h3{
-		font-size: 25px;
-	}
 }
 
 @media only screen and (max-width: 375px){
