--- a/insurance.css
+++ b/insurance.css
@@ -1,9 +1,9 @@
 /*------------------------------------------------------------------
 Main Stylesheet
 
-Project:    Highpoint Corporate Template
+Project:    HighPoint - Multipurpose Business Template
 Version:    1.0
-Last change:    14/11/2021
+Last change:    03/12/2021
 Author:    creativemaze
 Primary use:    Insurance
 -------------------------------------------------------------------*/
@@ -58,7 +58,7 @@ ul{
 	width: 100%;
 }
 
-.js .loading::before {
+#loading::before {
 	content: '';
 	position: fixed;
 	z-index: 100000;
@@ -69,7 +69,7 @@ ul{
 	background: #ffffff;
 }
 
-.js .loading::after {
+#loading::after {
 	content: '';
 	position: fixed;
 	z-index: 100000;
@@ -396,7 +396,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
     text-decoration: none;
 	text-transform: uppercase;
     display: block;
-    font-size: 12px;
+    font-size: 13px;
 	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
@@ -483,7 +483,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
     text-decoration: none;
 	text-transform: uppercase;
     display: block;
-    font-size: 12px;
+    font-size: 13px;
 	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
@@ -597,7 +597,7 @@ li.slick-active button{
 }
 
 .grid_box .grid_image > img{
-	transition: ease-in-out 1.25s;
+	transition: ease-in-out 3.25s;
 }
 
 .grid_box:hover .grid_image > img{
@@ -793,7 +793,6 @@ li.slick-active button{
 	padding: 25px 20px;
 	margin-bottom: 10px;
 	max-width: 350px;
-	transition: 0.5s;
 	overflow: hidden;
 }
 
@@ -1101,7 +1100,6 @@ li.slick-active button{
 	border-radius: 50%;
 	overflow: hidden;
 	position: relative;
-	transition: ease-in-out 0.5s;
 }
 
 .team_image img{
@@ -1116,14 +1114,6 @@ li.slick-active button{
 	padding-top: 15px;
 	padding-bottom: 15px;
 	text-align: center;
-}
-
-.team_box .team_image > img{
-	transition: ease-in-out 3.25s;
-}
-
-.team_box:hover .team_image > img{
-	transform: scale(1.15);
 }
 
 .team_name{
